# ReedCMS

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  Reed.toml  Reed.toml.example  test_monitor.rs
.github/workflows/: README.md  benchmark.yml  coverage.yml  test.yml
.reed/: api.security.csv  entity_taxonomy.matrix.csv  meta.csv  project.csv  roles.matrix.csv  routes.csv  server.csv  taxonomie.matrix.csv  text.csv
_workbench/: CLI-Testing-Results.md  key-migration-plan.md  phase3_template_conversion_report.txt
_workbench/Archive/libs/: config.rs  functions.rs  handlers.rs  icons.rs  keybase.rs  pageconf.rs  routing.rs
_workbench/Log/: 251013-P01.csv  251013-P02.csv  251013-P03.csv  251013-P04.csv  251013-P05.csv  INDEX.csv  P001-251013-0723.csv  README.md
_workbench/Tickets/: IMPLEMENTATION-ROADMAP.md  REEDBASE_MODULE_ARCHITECTURE.md  TICKET-STATUS.md  project_coding_standards.csv  project_debugging.md  project_functions.csv  project_optimisations.md  project_summary.md  project_todo.md  ticket-index.csv
_workbench/Tickets/REED-01-Foundation/: REED-01-01-foundation-communication-system.md  REED-01-02-foundation-error-system.md
_workbench/Tickets/REED-02-Data/: REED-02-05-data-matrix-csv-handler.md
_workbench/Tickets/REED-02-DataLayer/: REED-02-01-reedbase-core-services.md  REED-02-02-csv-handler-system.md  REED-02-03-environment-fallback-system.md  REED-02-04-backup-system.md  REED-02-06-data-taxonomy-system.md
_workbench/Tickets/REED-03-SecurityLayer/: REED-03-01-user-management-system.md  REED-03-02-role-permission-system.md  REED-03-03-taxonomy-system.md
_workbench/Tickets/REED-04-CLILayer/: REED-04-01-cli-command-foundation.md  (+13 more)
_workbench/scripts/: bbc_english_fixer.py
man/: README.md  reed.1.ronn
manual/: README.md
manual/00-introduction/: architecture-overview.md  what-is-reedcms.md
manual/01-foundation-layer/: README.md
manual/02-data-layer/: README.md  backup-system.md  csv-architecture.md  data-operations.md  reedbase-cache.md
manual/03-security-layer/: README.md  authentication.md  password-hashing.md  role-system.md  user-management.md
manual/04-cli-layer/: README.md  common-patterns.md  config-commands.md  data-commands.md  layout-commands.md  role-commands.md  server-commands.md  user-commands.md
manual/05-template-layer/: README.md  atomic-design.md  filters.md  hot-reload.md  minijinja-integration.md
manual/06-server-layer/: README.md  actix-web-integration.md  client-detection.md  request-handling.md  response-building.md  routing.md
manual/07-api-layer/: README.md  authentication.md  rate-limiting.md  restful-endpoints.md  security-matrix.md
manual/08-asset-layer/: README.md  css-bundler.md  js-bundler.md  session-hash.md  static-server.md
manual/09-build-layer/: README.md  binary-compiler.md  build-pipeline.md  file-watcher.md
manual/10-monitor-layer/: README.md  debug-tools.md  monitoring-system.md  performance-profiler.md
manual/appendices/: csv-file-formats.md  error-codes.md  migration-guides.md  performance-benchmarks.md
reedbase/: BENCHMARKS.md  CI_CD.md  COVERAGE.md  Cargo.toml  TEST_FIXTURES.md
reedbase/.reedbase/metrics/: query_duration.csv  test_flush.csv  test_metric.csv
reedbase/benches/: concurrent.rs  core_ops.rs  queries.rs  versioning.rs
reedbase/src/: error.rs  lib.rs
reedbase/src/btree/: mod.rs  tree.rs  types.rs
reedbase/src/database/: database.rs  execute.rs  index.rs  mod.rs  query.rs  types.rs
reedbase/src/indices/: mod.rs
reedbase/src/metrics/: aggregator.rs  collector.rs  mod.rs  storage.rs  types.rs
reedbase/src/reedql/: executor.rs  mod.rs
reedbase/src/registry/: dictionary_test.rs  init.rs  mod.rs
reedbase/src/schema/: mod.rs
reedbase/src/tables/: table.rs
reedbase/src/version/: mod.rs
reedbase/tests/: concurrency_test.rs  correctness_test.rs  database_api_test.rs  error_handling_test.rs  test_utils.rs
reedcli/: Cargo.toml
reedcli/docs/: COMMAND-MIGRATION.md  IMPLEMENTATION-STATUS.md  STATUS.md
reedcli/src/: formatter.rs  formatter_test.rs  help.rs  help_test.rs  integration.rs  integration_test.rs  lib.rs  parser.rs  parser_test.rs  registry.rs  registry_test.rs  shell.rs  shell_test.rs  types.rs
reedcli/src/adapters/: executor.rs  executor_test.rs  mod.rs  parser.rs  parser_test.rs  registry.rs  registry_test.rs  validator.rs  validator_test.rs
scripts/: README.md  build-man-pages.sh  install-system.sh  install-user.sh  setup.sh  uninstall-system.sh  uninstall-user.sh  uninstall.sh
src/: lib.rs  main.rs
src/man/: README.md  reed.1
src/reedcms/: mod.rs  reedstream.rs  reedstream_test.rs
(+732 files in other folders)
