[package]
name = "reedcms"
version = "0.1.0"
edition = "2021"
authors = ["Vivian Voss <ask@vvoss.dev>"]
license = "Apache-2.0"
description = "High-Performance Headless Rust CMS"
repository = "https://github.com/vvoss-dev/reedcms"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
csv = "1.3"
xz2 = "0.1"
chrono = "0.4"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"

[dev-dependencies]
