[package]
name = "reedcms"
version = "0.1.0"
edition = "2021"
authors = ["Vivian Voss <ask@vvoss.dev>"]
license = "Apache-2.0"
description = "High-Performance Headless Rust CMS"
repository = "https://github.com/vvoss-dev/reedcms"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
csv = "1.3"
xz2 = "0.1"
chrono = "0.4"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
minijinja = { version = "2.0", features = ["debug", "loader"] }
actix-web = "4.9"
actix-rt = "2.10"
tokio = { version = "1.0", features = ["full"] }
num_cpus = "1.16"

[dev-dependencies]
