[package]
name = "reedcms"
version = "0.1.0"
edition = "2021"
authors = ["Vivian Voss <ask@vvoss.dev>"]
license = "Apache-2.0"
description = "High-Performance Headless Rust CMS"
repository = "https://github.com/vvoss-dev/reedcms"

[[bin]]
name = "reed"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
csv = "1.3"
xz2 = "0.1"
chrono = "0.4"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
minijinja = { version = "2.0", features = ["builtins", "debug", "loader", "multi_template", "macros"] }
actix-web = "4.9"
actix-rt = "2.10"
tokio = { version = "1.0", features = ["full"] }
num_cpus = "1.16"
urlencoding = "2.1"
base64 = "0.22"
futures-util = "0.3"
sha2 = "0.10"
md5 = "0.7"
regex = "1.10"
flate2 = "1.0"
brotli = "3.3"
tar = "0.4"
walkdir = "2.4"
notify = "4.0"
toml = "0.8"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2
