[package]
name = "reedbase"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20"
bsdiff = "0.2"
xz2 = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
crc32fast = "1.4"
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.11"
chrono = "0.4"
memmap2 = "0.9"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_ops"
harness = false

[[bench]]
name = "queries"
harness = false

[[bench]]
name = "concurrent"
harness = false

[[bench]]
name = "versioning"
harness = false
