[package]
name = "reedcli"
version = "0.1.0"
edition = "2021"
authors = ["Vivian Voss <ask@vvoss.dev>"]
license = "Apache-2.0"
description = "ReedCLI - Unified CLI for Reed tools (ReedBase, ReedCMS)"

[dependencies]
toml = "0.8"   # TOML parser for Reed.toml registry files
which = "6.0"  # Binary path resolution for adapter discovery

[dev-dependencies]
# Test dependencies if needed
