[package]
name = "reedcli"
version = "0.1.0"
edition = "2021"
authors = ["Vivian Voss <ask@vvoss.dev>"]
license = "Apache-2.0"
description = "ReedCLI - Unified CLI for Reed tools (ReedBase, ReedCMS)"

[dependencies]
toml = "0.8"        # TOML parser for Reed.toml registry files
which = "6.0"       # Binary path resolution for adapter discovery
serde_json = "1.0"  # JSON support for CommandOutput data

[dev-dependencies]
# Test dependencies if needed
